--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-18 [美国《新闻法》闯关受阻：谁在阻挡媒体记者的“护身符”？](/articles/voa/1010240.md)
+
 12-18 [受特朗普胜选影响，中国资本市场11月资金外流创历史新高](/articles/voa/1010241.md)
 
 12-17 [菲律宾向南中国海争议海域坐滩军舰运送补给品，未遭中方舰船阻拦](/articles/voa/1010242.md)
@@ -598,6 +600,4 @@
 12-5 [不满美国最新对台军售，北京宣布新制裁措施](/articles/voa/1010538.md)
 
 12-5 [习近平视察军队强调三个“绝对”，董军现身上海引起外界兴趣](/articles/voa/1010539.md)
-
-12-5 [海外港人在台北发布《自由香港宣言》 誓言灭共并筹组香港议会](/articles/voa/1010540.md)
 
