--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-18 [以色列国防部长设想以色列战后对加沙的安全控制](/articles/voa/1010233.md)
+
 12-18 [被指控为中国间谍的律师对英国情报机构的诉讼败诉](/articles/voa/1010234.md)
 
 12-18 [欧盟就罗马尼亚总统选举的保障措施调查TikTok](/articles/voa/1010235.md)
@@ -598,6 +600,4 @@
 12-6 [《致命中国》作者纳瓦罗再出山 将对华强硬贸易政策进行到底？](/articles/voa/1010531.md)
 
 12-6 [日本向菲律宾提供一千多万美元的援助 提升其海上感知能力](/articles/voa/1010532.md)
-
-12-6 [尹锡悦面临国会罢免投票和警方有关叛乱罪嫌的调查](/articles/voa/1010533.md)
 
