--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-18 [叙利亚反政府武装采用类似塔利班的方法寻求国际承认](/articles/voa/1010230.md)
+
+12-18 [澳大利亚与太平洋国家达成协议以遏制中国影响力](/articles/voa/1010231.md)
+
 12-18 [美国议员提案打击中国芬太尼贸易](/articles/voa/1010232.md)
 
 12-18 [以色列国防部长设想以色列战后对加沙的安全控制](/articles/voa/1010233.md)
@@ -596,8 +600,4 @@
 12-6 [中国经济衰退年轻人遭殃 节衣缩食 求助无望](/articles/voa/1010528.md)
 
 12-6 [报道：除众议长约翰逊外，台湾总统赖清德在关岛期间还与其他美国会领袖通话](/articles/voa/1010529.md)
-
-12-6 [林培瑞：科技加上极权，会不会改变人性？](/articles/voa/1010530.md)
-
-12-6 [《致命中国》作者纳瓦罗再出山 将对华强硬贸易政策进行到底？](/articles/voa/1010531.md)
 
