--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-18 [从华为Mate 70看中国芯片发展的停滞](/articles/nyt/1042100.md)
+
 12-18 [中国延长外国游客过境免签停留时间](/articles/nyt/1042101.md)
 
 12-18 [特朗普对华征税的最大受益者：越南北部海防市](/articles/nyt/1042102.md)
@@ -598,6 +600,4 @@
 9-10 [与贺锦丽辩论，特朗普将咆哮着走向失败](/articles/nyt/1042398.md)
 
 9-10 [苹果推出首款人工智能iPhone](/articles/nyt/1042399.md)
-
-9-10 [贺锦丽与特朗普辩论前瞻：关乎美国未来的九大问题](/articles/nyt/1042400.md)
 
