--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-18 [【404文库】六神磊磊读金庸｜年轻人已经够老老实实服服帖帖了](/articles/cdt/334419.md)
+
 12-18 [就叫熊太行也行｜我母校人大投诉我了，说我伤害她的商誉](/articles/cdt/334423.md)
 
 12-18 [熊太行｜王文当院长，中国人民大学这几年到底有多差](/articles/cdt/334429.md)
@@ -598,6 +600,4 @@
 11-12 [匿名网友｜珠海体育中心撞人事件发生后，我的妈妈被推进了重症监护室](/articles/cdt/335584.md)
 
 11-12 [【404文库】图拉的精神食粮｜珠海市体育中心撞人事件幸存者：有人脚断了，有人撞吐血了，看着很恐怖](/articles/cdt/335594.md)
-
-11-12 [每日一语 2024.11.10](/articles/cdt/335596.md)
 
