--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-18 [德国大选：绿党哈贝克拒绝与选项党魏德尔电视辩论](/articles/dw/1023357.md)
+
 12-18 [德国企业破产数量创10年来最高](/articles/dw/1023358.md)
 
 12-17 [中国放宽过境免签政策](/articles/dw/1023359.md)
@@ -598,6 +600,4 @@
 11-19 [英相与习近平谈人权 中方驱离外媒](/articles/dw/1023655.md)
 
 11-19 [欧盟的外交政策能否顶撞特朗普？](/articles/dw/1023656.md)
-
-11-19 [G20峰會：習近平走上C位 聯合宣言淪空談?](/articles/dw/1023657.md)
 
