--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-19 [张3丰的世界｜书店的葬礼最动人](/articles/cdt/334414.md)
+
 12-19 [【网络民议】阿强同志｜性少数议题事关民生问题](/articles/cdt/334417.md)
 
 12-18 [【404文库】六神磊磊读金庸｜年轻人已经够老老实实服服帖帖了](/articles/cdt/334419.md)
@@ -598,6 +600,4 @@
 11-13 [【404文库】雅君的好用分享｜浅聊这则官方声明的五个问题](/articles/cdt/335575.md)
 
 11-12 [基本常识｜有没有可能，及时化解矛盾的思路就是累积矛盾的源头？](/articles/cdt/335578.md)
-
-11-12 [老萧杂说｜对集体骑行一禁了之，莫如来一场当代版“潘晓讨论”](/articles/cdt/335580.md)
 
