--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-19 [美发布中国军力报告 国防部官员：解放军仍不具在可接受代价下侵台能力](/articles/voa/1010205.md)
+
 12-19 [特朗普敦促议员拒绝支出法案，政府停摆风险上升](/articles/voa/1010206.md)
 
 12-19 [美联储下调基准利率二十五个基点，但预计明年降息幅度会较小](/articles/voa/1010207.md)
@@ -598,6 +600,4 @@
 12-7 [罗马尼亚最高法院立场反转，裁定首轮总统大选投票结果无效](/articles/voa/1010503.md)
 
 12-7 [因国安法获刑后提前获释受阻的马俊文司法复核被香港法院驳回](/articles/voa/1010504.md)
-
-12-7 [台湾总统赖清德结束南太平洋出访 中国外交部：已就赖“过境”美国提出交涉](/articles/voa/1010505.md)
 
