--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-19 [那些原本是废话的常识｜希望你老实又服帖的人，多到超乎想象](/articles/cdt/334403.md)
+
 12-19 [张3丰的世界｜书店的葬礼最动人](/articles/cdt/334414.md)
 
 12-19 [【网络民议】阿强同志｜性少数议题事关民生问题](/articles/cdt/334417.md)
@@ -598,6 +600,4 @@
 11-13 [张黎利｜朱令父母收到北京人民检察院的正式答复](/articles/cdt/335573.md)
 
 11-13 [【404文库】雅君的好用分享｜浅聊这则官方声明的五个问题](/articles/cdt/335575.md)
-
-11-12 [基本常识｜有没有可能，及时化解矛盾的思路就是累积矛盾的源头？](/articles/cdt/335578.md)
 
