--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-19 [首尔：至少有100名朝鲜士兵为俄罗斯作战阵亡](/articles/voa/1010201.md)
+
+12-19 [越南总理关注扩大国际国防合作 美国愿发挥关键作用](/articles/voa/1010202.md)
+
 12-19 [美国警告：俄罗斯可能接近接受朝鲜拥有核武器](/articles/voa/1010203.md)
 
 12-19 [参院报告：美国遏制中俄获取高级计算机芯片“努力不足”](/articles/voa/1010204.md)
@@ -596,8 +600,4 @@
 12-7 [美国会听证会聚焦中共修改历史 六四学者：对历史最大的歪曲就是中共劫持了“中国”名称](/articles/voa/1010499.md)
 
 12-7 [“金砖币”遥遥无期，人民币难代美元 特朗普为何警告金砖国家？](/articles/voa/1010500.md)
-
-12-7 [法院判TikTok败诉 美两党议员：美国人民的胜利，中共的损失](/articles/voa/1010501.md)
-
-12-7 [中国一艘渔船在索马里海域遭劫持，船员目前安全](/articles/voa/1010502.md)
 
