--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+12-19 [美国参议院通过国防授权法案](/articles/dw/1023343.md)
+
+12-19 [五角大楼今年的中国军力报告有哪些内容？](/articles/dw/1023344.md)
+
+12-19 [德国圣诞市集上 人们觉得安全吗？](/articles/dw/1023345.md)
+
+12-19 [长平观察：“到底还恨不恨？在线等！”](/articles/dw/1023346.md)
+
 12-19 [法国大规模强奸案：51名被告均被判刑](/articles/dw/1023347.md)
 
 12-19 [德媒：一中国男子拍摄基尔军港被拘](/articles/dw/1023348.md)
@@ -592,12 +600,4 @@
 11-20 [黎智英首度出庭自辯 否認鼓吹港獨：太瘋狂](/articles/dw/1023641.md)
 
 11-20 [G20現場：「聯巴制美」 習近平給川普下馬威？](/articles/dw/1023642.md)
-
-11-20 [为什么鱼在水中不会沉下去？](/articles/dw/1023643.md)
-
-11-20 [乌克兰首次使用美国的ATACMS导弹袭击俄罗斯](/articles/dw/1023644.md)
-
-11-19 [戴耀廷：颠覆罪被判重刑的法律学者](/articles/dw/1023645.md)
-
-11-19 [47人案判刑  劉頴匡女友：今天不是結束，是歷史的中段](/articles/dw/1023646.md)
 
