--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-20 [习近平视察澳门: 庆祝“回归”25周年背后的经济隐忧与民主倒退](/articles/voa/1010192.md)
+
+12-20 [美司法部：从事政治活动的加州居民孙耀宁因非法充当中国政府代理人而被逮捕](/articles/voa/1010193.md)
+
 12-20 [法律顾问披露：尹锡悦将在宪法法院审理弹劾案时自己为自己辩护](/articles/voa/1010194.md)
 
 12-20 [中国再展“基建狂魔”力量 在渤海湾修建全球最大人工岛机场](/articles/voa/1010195.md)
@@ -596,8 +600,4 @@
 12-7 [叙利亚反政府武装夺取中部城市哈马](/articles/voa/1010490.md)
 
 12-7 [美众议院通过一项教育法案，旨在向高中生普及共产主义的危害](/articles/voa/1010491.md)
-
-12-7 [VOA专访前乌克兰总统波罗申科：可以24小时结束战争](/articles/voa/1010492.md)
-
-12-7 [中国微调经济刺激举措，应对美国新政府上台](/articles/voa/1010493.md)
 
