--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,12 @@
 
 12-20 [每日一语 2024.12.18](/articles/cdt/334382.md)
 
+12-20 [个人记忆库｜报告：三年口罩，戴了个寂寞](/articles/cdt/334387.md)
+
+12-20 [真实故事计划｜大哥在养殖场看着你](/articles/cdt/334389.md)
+
+12-20 [【404文库】鸡蛋bot｜高楼燃爆调查：事发前两小时燃气公司曾到场，物业有入户密码未进屋排查](/articles/cdt/334390.md)
+
 12-20 [每日一语 2024.12.19](/articles/cdt/334392.md)
 
 12-20 [水瓶纪元｜海棠作者被捕，耽美创作频繁涉刑出路何在？](/articles/cdt/334396.md)
@@ -594,10 +600,4 @@
 11-13 [【404文库】基本常识｜很痛心但很遗憾，没有什么办法能阻止悲剧发生](/articles/cdt/335532.md)
 
 11-13 [【404文库】鸡蛋bot｜珠海市体育中心袭击事件背后](/articles/cdt/335533.md)
-
-11-13 [【404媒体】“等帘子拉开，模特已经换上了新衣”(外二篇）](/articles/cdt/335560.md)
-
-11-13 [【404文库】水瓶纪元｜珠海体育场凶案翌日](/articles/cdt/335561.md)
-
-11-13 [每日一语 2024.11.12](/articles/cdt/335563.md)
 
