--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,7 +3,11 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-20 [青年志Youthology｜2024，微微存活](/articles/cdt/334375.md)
+
 12-20 [每日一语 2024.12.18](/articles/cdt/334382.md)
+
+12-20 [二湘的十一维空间｜人大王宪举教授粗鲁提问的背后，是国人的国际视野问题](/articles/cdt/334384.md)
 
 12-20 [个人记忆库｜报告：三年口罩，戴了个寂寞](/articles/cdt/334387.md)
 
@@ -596,8 +600,4 @@
 11-14 [豫广｜一个夜骑开封大学生的自白](/articles/cdt/335528.md)
 
 11-13 [常识流通处｜杀害一个人，世人常有恻隐之心；但是，消灭一个符号呢？](/articles/cdt/335531.md)
-
-11-13 [【404文库】基本常识｜很痛心但很遗憾，没有什么办法能阻止悲剧发生](/articles/cdt/335532.md)
-
-11-13 [【404文库】鸡蛋bot｜珠海市体育中心袭击事件背后](/articles/cdt/335533.md)
 
