--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-20 [通用汽车中国业务为何急剧崩溃](/articles/nyt/1042093.md)
+
 12-20 [为什么星巴克在中国“糊”了](/articles/nyt/1042094.md)
 
 12-19 [法国最臭名昭著的强奸犯：他为何找陌生人强奸妻子](/articles/nyt/1042095.md)
@@ -598,6 +600,4 @@
 9-12 [阴森vs.希望：特朗普和贺锦丽口中的两个美国](/articles/nyt/1042391.md)
 
 9-12 [若特朗普当选，最大受益人可能是中国](/articles/nyt/1042392.md)
-
-9-11 [美国女“毒骡”在中国被判无期，家人向美政府求助](/articles/nyt/1042393.md)
 
