--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-20 [五角大楼：在阿萨德倒台前，驻叙利亚的美军人数已翻倍](/articles/voa/1010181.md)
+
 12-20 [路透：关税威胁迫近之际 中国国有进口商采购美国大豆](/articles/voa/1010182.md)
 
 12-20 [VOA专访白宫国安会官员：加入北约对保障乌克兰安全来说是必要的，是否发出入盟邀请取决于特朗普](/articles/voa/1010183.md)
@@ -598,6 +600,4 @@
 12-7 [学者：国安秩序令香港逐渐转变成“海盗基地”式另类国际金融中心](/articles/voa/1010479.md)
 
 12-7 [专访独立媒体人王剑：习近平如何迎战特朗普2.0时代？](/articles/voa/1010480.md)
-
-12-7 [尹锡悦弹劾案进行表决 韩国执政与在野党角力](/articles/voa/1010481.md)
 
