--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-20 [与中国竞争 澳大利亚宣布上亿美元援助 加大对所罗门群岛警务支持](/articles/voa/1010179.md)
+
 12-20 [美國2024財年遣返无证移民逾27万 创10年新高](/articles/voa/1010180.md)
 
 12-20 [五角大楼：在阿萨德倒台前，驻叙利亚的美军人数已翻倍](/articles/voa/1010181.md)
@@ -598,6 +600,4 @@
 12-7 [韩国总统尹锡悦表示将提前离任](/articles/voa/1010477.md)
 
 12-7 [泽连斯基证实并赞扬丹麦向乌克兰交付第二批F-16战机](/articles/voa/1010478.md)
-
-12-7 [学者：国安秩序令香港逐渐转变成“海盗基地”式另类国际金融中心](/articles/voa/1010479.md)
 
