--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-20 [台湾“蓝白”阵营闯关争议三法 逾千民众抗议在野党修法附和中国](/articles/voa/1010177.md)
+
 12-20 [马来西亚称将重启搜寻失踪的马航MH370残骸](/articles/voa/1010178.md)
 
 12-20 [与中国竞争 澳大利亚宣布上亿美元援助 加大对所罗门群岛警务支持](/articles/voa/1010179.md)
@@ -598,6 +600,4 @@
 12-7 [从大众汽车退出新疆到优衣库弃用新疆棉等，维吾尔人权问题为何此时接连取得进展？](/articles/voa/1010475.md)
 
 12-7 [韩国政局突变：总统罢免案遭执政党抵制未能通过，尹锡悦表示愿提前离职](/articles/voa/1010476.md)
-
-12-7 [韩国总统尹锡悦表示将提前离任](/articles/voa/1010477.md)
 
