--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+1-1 [美国打击也门胡塞武装控制的地区](/articles/voa/1009935.md)
+
 1-1 [联合国报告指责以军对加沙袭击导致整个医疗系统濒临崩溃](/articles/voa/1009936.md)
 
 1-1 [中国金融和房产开发从业者人数锐减，昔日黄金产业人才艰困求“上岸”](/articles/voa/1009937.md)
@@ -598,6 +600,4 @@
 12-18 [以色列国防部长设想以色列战后对加沙的安全控制](/articles/voa/1010233.md)
 
 12-18 [被指控为中国间谍的律师对英国情报机构的诉讼败诉](/articles/voa/1010234.md)
-
-12-18 [欧盟就罗马尼亚总统选举的保障措施调查TikTok](/articles/voa/1010235.md)
 
