--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+1-1 [从禁运矿产到调查美企，2025年美中科技贸易战场，中国还有哪些底牌？](/articles/voa/1009929.md)
+
 1-1 [泽连斯基誓言为2025年结束战争而战](/articles/voa/1009930.md)
 
 1-1 [格鲁吉亚人在新年之际举行大规模集会支持欧盟](/articles/voa/1009931.md)
@@ -598,6 +600,4 @@
 12-18 [率团访问中国 台湾前总统马英九：搭建两岸“和平桥梁”](/articles/voa/1010227.md)
 
 12-18 [安大略省省长称特朗普加征关税将是美国市场的灾难](/articles/voa/1010228.md)
-
-12-18 [国会即将达成本年度支出协议，包括1000多亿美元的灾难援助资金](/articles/voa/1010229.md)
 
