--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+1-2 [新奥尔良：车辆冲撞人群 致10死36伤](/articles/dw/1023221.md)
+
 1-1 [新奥尔良：车辆冲撞人群 致10死35伤](/articles/dw/1023222.md)
 
 1-1 [俄罗斯泄密军事文件：若与北约开战 俄将攻击日韩](/articles/dw/1023223.md)
@@ -598,6 +600,4 @@
 12-4 [抨击《布达佩斯备忘录》 乌克兰称唯一安全保障是加入北约](/articles/dw/1023519.md)
 
 12-3 [特朗普称将“阻止”新日铁收购美国钢铁公司](/articles/dw/1023520.md)
-
-12-3 [印度希望审慎恢复对华经贸关系](/articles/dw/1023521.md)
 
