--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+1-2 [美国新奥尔良市元旦发生驾车撞人事件，10人死亡30人受伤](/articles/voa/1009919.md)
+
 1-2 [韩国从失事客机的黑匣子中提取数据，遇难者家人在失事现场祭奠亲人](/articles/voa/1009920.md)
 
 1-2 [乌克兰关闭俄天然气管道，莫斯科半个世纪建立的欧洲市场丧失殆尽](/articles/voa/1009921.md)
@@ -598,6 +600,4 @@
 12-19 [特朗普说“美中可共同解决世上任何问题”引发中国网民热议](/articles/voa/1010217.md)
 
 12-19 [五角大楼发布中国军力报告，称中国军队高层腐败干扰军事现代化进程](/articles/voa/1010218.md)
-
-12-19 [美国政府可能明年禁止中国联洲路由器进入美国市场](/articles/voa/1010219.md)
 
