--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+1-2 [叙利亚抗议者呼吁为失踪的活动人士伸张正义](/articles/voa/1009908.md)
+
 1-2 [《华邮》：美国官员表示中国政府黑客入侵了美财政部负责制裁事务的办公室](/articles/voa/1009909.md)
 
 1-2 [特斯拉电动皮卡在拉斯维加斯特朗普酒店外起火导致1死7伤](/articles/voa/1009910.md)
@@ -598,6 +600,4 @@
 12-19 [特朗普敦促议员拒绝支出法案，政府停摆风险上升](/articles/voa/1010206.md)
 
 12-19 [美联储下调基准利率二十五个基点，但预计明年降息幅度会较小](/articles/voa/1010207.md)
-
-12-19 [尽管受到中国制裁，鲁比奥表示有信心以国务卿身份与北京接触](/articles/voa/1010208.md)
 
