--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+1-2 [他们逃离新疆拘禁营来到美国，却面临新的恐惧](/articles/nyt/1042066.md)
+
 1-2 [为何驾车冲撞人群事件越来越常见](/articles/nyt/1042067.md)
 
 1-2 [习近平新年贺词承认中国经济面临挑战](/articles/nyt/1042068.md)
@@ -598,6 +600,4 @@
 9-24 [拜登政府禁止美国联网汽车使用中国研发软件](/articles/nyt/1042364.md)
 
 9-23 [报告称美国联邦研究资金被用于推动中国军事技术](/articles/nyt/1042365.md)
-
-9-23 [两岁小猫在黄石公园走失，独自跋涉1300公里后平安回家](/articles/nyt/1042366.md)
 
