--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+1-2 [中国商品“绕路”出口美国，特朗普关税战2.0怎么打](/articles/nyt/1042065.md)
+
 1-2 [他们逃离新疆拘禁营来到美国，却面临新的恐惧](/articles/nyt/1042066.md)
 
 1-2 [为何驾车冲撞人群事件越来越常见](/articles/nyt/1042067.md)
@@ -598,6 +600,4 @@
 9-24 [中东暴力升级，拜登的时间已经不多了](/articles/nyt/1042363.md)
 
 9-24 [拜登政府禁止美国联网汽车使用中国研发软件](/articles/nyt/1042364.md)
-
-9-23 [报告称美国联邦研究资金被用于推动中国军事技术](/articles/nyt/1042365.md)
 
