--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+1-2 [因戒严调查面临逮捕 尹锡悦誓言“奋战到底”](/articles/voa/1009906.md)
+
 1-2 [高温再破记录 2024年成中国数十年来最热一年](/articles/voa/1009907.md)
 
 1-2 [叙利亚抗议者呼吁为失踪的活动人士伸张正义](/articles/voa/1009908.md)
@@ -598,6 +600,4 @@
 12-19 [参院报告：美国遏制中俄获取高级计算机芯片“努力不足”](/articles/voa/1010204.md)
 
 12-19 [美发布中国军力报告 国防部官员：解放军仍不具在可接受代价下侵台能力](/articles/voa/1010205.md)
-
-12-19 [特朗普敦促议员拒绝支出法案，政府停摆风险上升](/articles/voa/1010206.md)
 
