--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+1-2 [【异闻观止】外交部｜人类命运共同体研究中心揭牌仪式在北京举行](/articles/cdt/333976.md)
+
 1-2 [亮见｜编一本领导微信群使用指南，迫在眉睫](/articles/cdt/333978.md)
 
 1-2 [【旧文重温】明源地产研究院｜3年时间，房地产倒退了10年](/articles/cdt/333980.md)
@@ -598,6 +600,4 @@
 11-24 [晖常有道｜网友们说出了潮州这次的更多内幕了](/articles/cdt/335154.md)
 
 11-24 [每日一语 2024.11.23](/articles/cdt/335158.md)
-
-11-25 [每日一语 2024.11.24](/articles/cdt/335160.md)
 
