--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+1-2 [北京宣布将28家美企纳入出口管控名单，部分企业已因对台军售遭到中方制裁](/articles/voa/1009902.md)
+
 1-2 [盘点欧亚制造业表现：2024年整体疲软，唯一亮点不是中国](/articles/voa/1009903.md)
 
 1-2 [华盛顿考虑制定新规，限制或禁止中国产无人机进入美国](/articles/voa/1009904.md)
@@ -598,6 +600,4 @@
 12-19 [鸿海富士康高管传讨论收购雷诺对日产的大部分持股](/articles/voa/1010200.md)
 
 12-19 [首尔：至少有100名朝鲜士兵为俄罗斯作战阵亡](/articles/voa/1010201.md)
-
-12-19 [越南总理关注扩大国际国防合作 美国愿发挥关键作用](/articles/voa/1010202.md)
 
