--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+1-3 [每日一语 2025.1.1](/articles/cdt/333969.md)
+
 1-2 [李承鹏｜2024年度总结](/articles/cdt/333971.md)
 
 1-2 [【异闻观止】外交部｜人类命运共同体研究中心揭牌仪式在北京举行](/articles/cdt/333976.md)
@@ -598,6 +600,4 @@
 11-26 [【CDT关注】莽莽 x 低音｜破产的城市精英与失败的人生重启](/articles/cdt/335145.md)
 
 11-25 [冰川思享号｜幸福者退让，好浓一碗毒鸡汤](/articles/cdt/335147.md)
-
-11-24 [晖常有道｜网友们说出了潮州这次的更多内幕了](/articles/cdt/335154.md)
 
