--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+1-3 [警方：拉斯维加斯特斯拉电动皮卡事件死亡男子在爆炸前头部中弹](/articles/voa/1009896.md)
+
+1-3 [以色列空袭在加沙各地打死至少26人](/articles/voa/1009897.md)
+
 1-3 [台海进入新年后不平静，解放军在台湾周边海空域进行今年首次“战备警巡”](/articles/voa/1009898.md)
 
 1-3 [中国对巴拿马运河的渗透为何令美国担忧？](/articles/voa/1009899.md)
@@ -596,8 +600,4 @@
 12-20 [法律顾问披露：尹锡悦将在宪法法院审理弹劾案时自己为自己辩护](/articles/voa/1010194.md)
 
 12-20 [中国再展“基建狂魔”力量 在渤海湾修建全球最大人工岛机场](/articles/voa/1010195.md)
-
-12-20 [“学霸就餐区”惹议 凸显中国逐利教育下的“唯分数”思维](/articles/voa/1010196.md)
-
-12-19 [欧洲海底电缆事件调查新进展：北欧四国代表获准登上中国涉嫌货船](/articles/voa/1010197.md)
 
