--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+1-3 [中国将28家美国实体列入出口管制名单](/articles/nyt/1042063.md)
+
 1-2 [让你在2025年更健康的12条健身建议](/articles/nyt/1042064.md)
 
 1-2 [中国商品“绕路”出口美国，特朗普关税战2.0怎么打](/articles/nyt/1042065.md)
@@ -598,6 +600,4 @@
 9-24 [从铁路到港口，中国欲加强亚洲贸易枢纽地位](/articles/nyt/1042361.md)
 
 9-24 [中国降准并下调存量房贷利率，试图提振经济](/articles/nyt/1042362.md)
-
-9-24 [中东暴力升级，拜登的时间已经不多了](/articles/nyt/1042363.md)
 
