--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+1-3 [拜登授予20名美国人总统公民奖章](/articles/voa/1009888.md)
+
+1-3 [台湾外长：台湾立法院长韩国瑜将率八名朝野立委参加特朗普就职仪式](/articles/voa/1009889.md)
+
+1-3 [中国针对美国防公司实施新制裁,分析人士:影响微不足道](/articles/voa/1009890.md)
+
 1-3 [联邦上诉法院阻止拜登政府恢复网络中立规则的努力](/articles/voa/1009891.md)
 
 1-3 [泽连斯基：特朗普有可能在制止乌克兰战争方面发挥“决定性”作用](/articles/voa/1009892.md)
@@ -594,10 +600,4 @@
 12-20 [共和党参议员要求终止《美中科技合作协定》](/articles/voa/1010186.md)
 
 12-20 [普京称准备好就乌克兰战争与特朗普达成妥协](/articles/voa/1010187.md)
-
-12-20 [中国影响力行动绕过联邦监管，瞄准美国地方官员](/articles/voa/1010188.md)
-
-12-20 [布林肯谈拜登政府外交成就：促成盟友对中国的一致态度](/articles/voa/1010189.md)
-
-12-20 [德国警方对一名中国嫌疑人展开间谍活动调查](/articles/voa/1010190.md)
 
