--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,7 +5,15 @@
 
 1-3 [极昼工作室｜在极越最后的日子](/articles/cdt/333954.md)
 
+1-3 [作者不详｜纪念李医生被训诫5周年](/articles/cdt/333956.md)
+
 1-3 [每日一语 2025.1.2](/articles/cdt/333959.md)
+
+1-3 [真实故事计划｜在回本路上挣扎的年轻人](/articles/cdt/333961.md)
+
+1-3 [iWeekly周末画报｜文学杂志纷纷停刊，这位主编却说“我们还在继续”](/articles/cdt/333963.md)
+
+1-3 [中国新闻周刊｜再曝非正常死亡，“指居”制度何去何从？](/articles/cdt/333964.md)
 
 1-3 [每日一语 2025.1.1](/articles/cdt/333969.md)
 
@@ -592,12 +600,4 @@
 11-25 [基本常识｜体操冠军直播跳舞可比当搓澡工强多了](/articles/cdt/335109.md)
 
 11-25 [胖虎鲨｜天通苑“软肋学”发表两周年](/articles/cdt/335111.md)
-
-11-25 [【异闻观止】卫健委群发短信“再婚夫妻再婚后可再生3个孩子”？官方回应系新政](/articles/cdt/335113.md)
-
-11-25 [倪刃｜多个欧洲国家，已经开始为战争做准备](/articles/cdt/335118.md)
-
-11-25 [风声OPINION｜中国恢复对日免签，但仇日情绪怎么办？](/articles/cdt/335120.md)
-
-11-25 [【网络民议】“关门三天损失两千，开门迎检或被罚五万”](/articles/cdt/335144.md)
 
