--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 1-3 [极昼工作室｜在极越最后的日子](/articles/cdt/333954.md)
 
+1-3 [基本常识｜一夜难安睡的银川人，该逃还是该躲？](/articles/cdt/333955.md)
+
 1-3 [作者不详｜纪念李医生被训诫5周年](/articles/cdt/333956.md)
 
 1-3 [每日一语 2025.1.2](/articles/cdt/333959.md)
@@ -598,6 +600,4 @@
 11-25 [衣者褚｜我们的软肋，他们的摇钱树](/articles/cdt/335107.md)
 
 11-25 [基本常识｜体操冠军直播跳舞可比当搓澡工强多了](/articles/cdt/335109.md)
-
-11-25 [胖虎鲨｜天通苑“软肋学”发表两周年](/articles/cdt/335111.md)
 
