--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+1-3 [韩国调查人员试图拘提尹锡悦 与总统警卫对峙5小时暂停执行](/articles/voa/1009886.md)
+
+1-3 [美国退伍军人试图加入真主党 因支持恐怖组织而遭起诉](/articles/voa/1009887.md)
+
 1-3 [拜登授予20名美国人总统公民奖章](/articles/voa/1009888.md)
 
 1-3 [台湾外长：台湾立法院长韩国瑜将率八名朝野立委参加特朗普就职仪式](/articles/voa/1009889.md)
@@ -596,8 +600,4 @@
 12-20 [特朗普支持的开支案在众议院未能通过，美国政府关闭时刻逼近](/articles/voa/1010184.md)
 
 12-20 [美国高级官员：巴基斯坦正在开发最终可能打击到美国的导弹](/articles/voa/1010185.md)
-
-12-20 [共和党参议员要求终止《美中科技合作协定》](/articles/voa/1010186.md)
-
-12-20 [普京称准备好就乌克兰战争与特朗普达成妥协](/articles/voa/1010187.md)
 
