--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+1-3 [中国《海峡导报》涉统战工作遭禁止驻台 台国安局称中共对台散布争议信息量飙升](/articles/voa/1009884.md)
+
 1-3 [金融时报：中国央行面临经济下行压力 将推动货币政策重大改革](/articles/voa/1009885.md)
 
 1-3 [韩国调查人员试图拘提尹锡悦 与总统警卫对峙5小时暂停执行](/articles/voa/1009886.md)
@@ -598,6 +600,4 @@
 12-20 [路透：关税威胁迫近之际 中国国有进口商采购美国大豆](/articles/voa/1010182.md)
 
 12-20 [VOA专访白宫国安会官员：加入北约对保障乌克兰安全来说是必要的，是否发出入盟邀请取决于特朗普](/articles/voa/1010183.md)
-
-12-20 [特朗普支持的开支案在众议院未能通过，美国政府关闭时刻逼近](/articles/voa/1010184.md)
 
