--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+1-3 [山西一医院涉嫌买卖儿童遭调查](/articles/dw/1023210.md)
+
 1-3 [千万公务员大规模加薪 能否拯救中国经济？](/articles/dw/1023211.md)
 
 1-3 [对峙六小时后 韩公调处停止拘留被弹劾总统尹锡悦](/articles/dw/1023212.md)
@@ -598,6 +600,4 @@
 12-4 [脂肪，你值得拥有！](/articles/dw/1023508.md)
 
 12-4 [法国是否会面临一场金融危机？](/articles/dw/1023509.md)
-
-12-4 [知名作家琼瑶离世 赵薇罕见发微博悼念](/articles/dw/1023510.md)
 
