--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+1-4 [青年志Youthology｜中国的“弱势一代”](/articles/cdt/333944.md)
+
+1-4 [【404文库】老干体v｜仓促放人，他们丢尽了「远洋捕捞」的脸！](/articles/cdt/333948.md)
+
 1-3 [极昼工作室｜在极越最后的日子](/articles/cdt/333954.md)
 
 1-3 [基本常识｜一夜难安睡的银川人，该逃还是该躲？](/articles/cdt/333955.md)
@@ -596,8 +600,4 @@
 11-25 [每日一语 2024.11.25](/articles/cdt/335103.md)
 
 11-25 [魏春亮说｜警察殴打小学生事件，反转了？](/articles/cdt/335106.md)
-
-11-25 [衣者褚｜我们的软肋，他们的摇钱树](/articles/cdt/335107.md)
-
-11-25 [基本常识｜体操冠军直播跳舞可比当搓澡工强多了](/articles/cdt/335109.md)
 
