--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+1-4 [美国宣布因中国永信至诚科技集团支持恶意网络组织而对其实施制裁。](/articles/voa/1009873.md)
+
 1-4 [海归被拒之门外？中国公务员选调政策凸显政治忠诚优先](/articles/voa/1009874.md)
 
 1-4 [泽连斯基：特朗普的强势与无常可以帮助结束俄乌战争](/articles/voa/1009875.md)
@@ -598,6 +600,4 @@
 12-21 [拜登卸任前全速将剩余资金变成军援交给基辅，G7考虑进一步压低俄原油价格](/articles/voa/1010171.md)
 
 12-21 [美国高级外交官在大马士革与叙利亚新统治者举行会晤](/articles/voa/1010172.md)
-
-12-21 [美国政府停摆机率大增，投资人情绪低迷，全球股市普遍下跌](/articles/voa/1010173.md)
 
