--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+1-4 [缅甸军政府独立纪念日特赦约6000名囚犯 同时加大网络言论控管力道](/articles/voa/1009857.md)
+
 1-4 [布林肯将访韩、日、法 首尔政局动荡之际稳固美韩同盟](/articles/voa/1009858.md)
 
 1-4 [专家解读习近平新年讲话：遏阻国际介入台海或为2025年中国外交要务](/articles/voa/1009859.md)
@@ -598,6 +600,4 @@
 12-21 [美国导弹测试期间 七名中国公民试图非法进入关岛](/articles/voa/1010155.md)
 
 12-21 [中国航天员成功完成9小时出舱任务 打破世界纪录](/articles/voa/1010156.md)
-
-12-21 [中国解除龙虾禁令 结束对澳大利亚的最后贸易壁垒](/articles/voa/1010157.md)
 
