--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+1-4 [十年来首次 为促进消费 中国政府为公务员大幅加薪](/articles/voa/1009856.md)
+
 1-4 [缅甸军政府独立纪念日特赦约6000名囚犯 同时加大网络言论控管力道](/articles/voa/1009857.md)
 
 1-4 [布林肯将访韩、日、法 首尔政局动荡之际稳固美韩同盟](/articles/voa/1009858.md)
@@ -598,6 +600,4 @@
 12-21 [卸任前夕 拜登再批准5.7亿美元对台军援](/articles/voa/1010154.md)
 
 12-21 [美国导弹测试期间 七名中国公民试图非法进入关岛](/articles/voa/1010155.md)
-
-12-21 [中国航天员成功完成9小时出舱任务 打破世界纪录](/articles/voa/1010156.md)
 
