--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+1-4 [恐将在“半旗”下就职 特朗普怒了且又说谎了](/articles/dw/1023200.md)
+
 1-4 [为什么拜登和特朗普都反对新日铁收购美国钢铁公司？](/articles/dw/1023201.md)
 
 1-4 [应对特朗普贸易政策 欧洲威胁提高美企税收](/articles/dw/1023202.md)
@@ -598,6 +600,4 @@
 12-5 [尹锡悦面临国会弹劾 执政党称仍将力挺总统](/articles/dw/1023498.md)
 
 12-5 [日本清酒列联合国“非物质文化遗产”](/articles/dw/1023499.md)
-
-12-5 [尹锡悦误判权力引发动荡  韩国经济及国际地位受冲击](/articles/dw/1023500.md)
 
