--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+1-5 [美司法部致函最高法，请求驳回特朗普延后执行TikTok禁令的要求](/articles/voa/1009853.md)
+
 1-4 [俄国防部称击落八枚美制远程导弹，乌东战略重镇附近爆发激战](/articles/voa/1009854.md)
 
 1-4 [专访何包钢：中国政治改革从希望到绝望，为何又提暴力革命？](/articles/voa/1009855.md)
@@ -598,6 +600,4 @@
 12-21 [黎智英是怎样的“麻烦制造者”？](/articles/voa/1010151.md)
 
 12-21 [避免政府关门 美国参议院通过临时支出法案](/articles/voa/1010152.md)
-
-12-21 [也门胡塞武装发射导弹袭击 以色列第二大城遭击中酿16伤](/articles/voa/1010153.md)
 
